# everydaypassion

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: daily.yml
data/curated/: MODERN_ART.md  MODERN_POEMS.md  artworks.json  poems.json
docs/: archive.html  index.html
docs/day/: 2026-06-20.html  2026-06-21.html  2026-06-22.html  2026-06-23.html  2026-06-24.html  2026-06-25.html  2026-06-26.html  2026-06-27.html  2026-06-28.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-02.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-06.html  2026-07-07.html  2026-07-08.html  2026-07-09.html  2026-07-10.html  2026-07-11.html  2026-07-12.html  2026-07-13.html  2026-07-14.html  2026-07-15.html  2026-07-16.html  2026-07-17.html  2026-07-18.html  2026-07-19.html  2026-07-20.html  2026-07-21.html  2026-07-22.html  2026-07-23.html  2026-07-24.html
docs/static/: app.css
everydaypassion/: __init__.py  builder.py  cli.py  config.py  library.py  models.py  picker.py  seeding.py  static_site.py  store.py
everydaypassion/sources/: __init__.py  _common.py  artic.py  cleveland.py  curated.py  http.py  met.py  poetry.py  pool.py  reflection.py  smk.py  vam.py  wikipedia.py
everydaypassion/web/: __init__.py  app.py  render.py
everydaypassion/web/static/: app.css
everydaypassion/web/templates/: base.html  day.html  (+1 more)
scripts/: com.everydaypassion.open.plist  install-launch-agent.sh
tests/: test_builder.py  test_library.py  test_picker.py  test_seeding.py  test_sources_contract.py  test_static_export.py  test_store.py
