[project]
name = "everydaypassion"
version = "0.1.0"
description = "A daily morning ritual of art and poetry."
requires-python = ">=3.11"
dependencies = ["python-dotenv>=1.0"]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
everydaypassion = "everydaypassion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["everydaypassion"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
